--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Desafio Pokedex</string>
     <string name="stack">Stacks</string>
+    <string name="ability">Abilities</string>
+    <string name="type">Type</string>
 </resources>
