--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Desafio Pokedex</string>
     <string name="stack">Stacks</string>
-    <string name="ability">Abilities</string>
+    <string name="abilities">Abilities</string>
+    <string name="ability">Ability</string>
     <string name="type">Type</string>
+    <string name="global_ok">Ok</string>
+    <string name="pok_mons_same_type">Pokémons same type</string>
 </resources>
