Altered:  - BaseFragment to alert errors.  - Observe errors from requests.

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="global_ok">Ok</string>
     <string name="pok_mons_same_type">Pokémons same type</string>
     <string name="evolution">Evolution</string>
+    <string name="error">Error!</string>
 </resources>
